Fixing responsiveness and small layout changes.

--- a/app/design/frontend/Webjump/theme-party/i18n/pt_BR.csv
+++ b/app/design/frontend/Webjump/theme-party/i18n/pt_BR.csv
@@ -1,3 +1,3 @@
-Create an Account,"cadastre-se",module,Magento_Customer
+Create an Account,"Cadastre-se",module,Magento_Customer
 "Sign In",Entre,module,Magento_Checkout
 "Search entire store here...","Qual artigo de festa você está procurando?",module,Magento_Search
