--- a/app/design/frontend/Webjump/theme-automotive/i18n/pt_BR.csv
+++ b/app/design/frontend/Webjump/theme-automotive/i18n/pt_BR.csv
@@ -1,3 +1,4 @@
 "Create an Account","Cadastre-se",module,Magento_Customer
 "Sign In","Entre",module,Magento_Customer
 "Search entire store here...","Pesquisar em todo o site...",module,Magento_Search
+"Enter your email address","Fique informado sobre o Volt"
