--- a/app/design/frontend/Webjump/theme-party/i18n/pt_BR.csv
+++ b/app/design/frontend/Webjump/theme-party/i18n/pt_BR.csv
@@ -4,3 +4,4 @@ Create an Account,"Cadastre-se",module,Magento_Customer
 "Installment up to 10 times with minimum installment of $10.00","Parcelamento em até 10 vezes com parcela mínima de R$ 50,00",module,Magento_Catalog
 "Enter your email address","Insira seu e-mail aqui"
 "Default welcome msg!","Bem vindo!",module,Magento_Theme
+"Newsletter","Newsletter"
