Translate newsletter automotive

--- a/app/design/frontend/Webjump/theme-automotive/i18n/pt_BR.csv
+++ b/app/design/frontend/Webjump/theme-automotive/i18n/pt_BR.csv
@@ -4,3 +4,4 @@
 "Enter your email address","Fique informado sobre o Volt"
 "Installment up to 10 times with minimum installment of $100.00","Parcelamento em até 10 vezes com parcela mínima de R$ 500,00",module,Magento_Catalog
 "Order now","Adquira agora",module,Magento_PageBuilder
+"Newsletter","Newsletter"
