Translate text on placeholder party

--- a/app/design/frontend/Webjump/theme-party/i18n/en_US.csv
+++ b/app/design/frontend/Webjump/theme-party/i18n/en_US.csv
@@ -1,1 +1,2 @@
 "Default welcome msg!","Welcome!",module,Magento_Theme
+"Search entire store here...","Which party item are you looking for?",module,Magento_Search
